--- a/BlackjackCsharpovy/BlackjackCsharpovy.csproj
+++ b/BlackjackCsharpovy/BlackjackCsharpovy.csproj
@@ -13,7 +13,7 @@
 
     <ItemGroup>
       <None Update="stats.json">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
     </ItemGroup>
 
